<resources>
    <string name="app_name">The Movie</string>

    <string name="status_loading">Loading...</string>
    <string name="status_Error">Error!!</string>

    <string name="menu_search">Search</string>
    <string name="menu_favourite">Favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_release_date">Release Date: %1$s</string>
    <string name="label_tagline">Tagline: %1$s</string>
    <string name="label_overView">Overview: %1$s</string>
    <string name="label_genre">Genre: %1$s</string>
    <string name="label_language">Language: %1$s</string>
    <string name="label_vote_average">Vote Average: %.0f</string>
    <string name="label_vote_count">Vote Count: %.0f</string>

</resources>